Fix tasks rendered with multiple customer detected and cropped faces when downloaded

--- a/face_client/css/app.css
+++ b/face_client/css/app.css
@@ -16249,7 +16249,7 @@ span.flatpickr-weekday {
     position: absolute;
     margin: auto;
     right: 40px;
-    top: 450px;
+    top: 200px;
     color: #fff;
     opacity: 0.6;
 }
